test/semantics/programs/invalid/noncomparable-types3.guav
# Should fail since relational expression has incomparable types

d = false >= true
